[metadata]
name = foconutil
version = 0.1.0
author =
    Shiz <hi@shiz.me>
description = Uility and library to talk to Focon Electronics System A/S devices
keywords = focon, rs485, train

[options]
zip_safe = False
packages =
    foconutil
    foconutil.devices
install_requires =
    pyserial
    crcmod

[options.package_data]
foconutil =
    py.typed

[options.entry_points]
console_scripts =
    focon-util = foconutil.cli:main

[options.extras_require]
tests =
    mypy

[mypy]
ignore_missing_imports = True
# below options are equivalent to --strict
warn_unused_configs = True
disallow_subclassing_any = True
disallow_any_generics = True
disallow_untyped_calls = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
disallow_untyped_decorators = True
check_untyped_defs = True
no_implicit_optional = True
warn_redundant_casts = True
warn_unused_ignores = True
warn_return_any = True

[mypy-foconutil.cli]
disallow_untyped_defs = False
disallow_incomplete_defs = False
